# omnibus-api

./: .gitignore  LICENSE  README.md  pyproject.toml
.omnibus/: pyvenv.cfg
app/: config.py  main.py
