[project]
name = "omnibus-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonathan Dickinson",email = "jon.dickinson17@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "neo4j (>=5.28.1,<6.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "ruff (>=0.11.4,<0.12.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 99
select = ["E", "F", "W", "I", "UP"]